--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "tunnel": "expo start --tunnel"
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
@@ -23,7 +22,11 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "^18.0.28",
+    "@types/react-native": "^0.70.11",
+    "@types/uuid": "^9.0.1",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
